Fix modal z-index issue

--- a/app/assets/stylesheets/05_splash.scss
+++ b/app/assets/stylesheets/05_splash.scss
@@ -7,6 +7,7 @@
     color: #333;
     font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
     min-width: 960px;
+    z-index: 0;
 
     // object-fit: contain;
 }
