--- a/app/assets/stylesheets/07_logout.scss
+++ b/app/assets/stylesheets/07_logout.scss
@@ -6,6 +6,7 @@
     font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
     background-color: rgb(247, 243, 243);
     color: #333;
+    z-index: 0;
 }
 
 .logout-message, .logout-bio, .logout-projects, .logout-social {
